--- a/lesson3/website_planning/css/small.css
+++ b/lesson3/website_planning/css/small.css
@@ -95,14 +95,13 @@ footer {
   line-height: 1.3rem;
   text-align: center;
   font-size: 0.9rem;
-  background-color: #00a9a5;
+  background-color: #007773;
   color: white;
   position: absolute;
 }
 
 footer a {
-  text-decoration: none;
-  color: black;
+  color: white;
 }
 
 footer a:hover {
@@ -124,7 +123,7 @@ footer a:hover {
   margin: 10px 0;
   width: 150px;
   height: 150px;
-  padding: 5px;
+  padding: 10px;
 }
 .colors p {
   text-align: center;
@@ -137,7 +136,7 @@ footer a:hover {
   background-color: #007aa3;
 }
 .color3 {
-  background-color: #00a9a5;
+  background-color: #007773;
 }
 .color4 {
   background-color: cyan;
